Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27355

QThread documentation has spelling mistake

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P5: Not important
    • 5.0.0 Beta 2
    • 4.8.1
    • Core: Threads
    • None
    • 90e207e4c712b75551f8064edeb245d660c6a406

    Description

      qthread.h

      public:
      // default argument causes thread to block indefinately
      bool wait(unsigned long time = ULONG_MAX);

      "indefinately" should be "indefinitely"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            caravanio Caravanio Napajejenunedkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes