Fix spelling mistake

Task-number: QTBUG-27355

Change-Id: I77ecc01e2a3ea1cac94e7c99c688cfd7cab5319b
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>

cregit: 90e207e4c712b75551f8064edeb245d660c6a406 https://github.com/qt/qtbase/commit/90e207e4c712b75551f8064edeb245d660c6a406